--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -174,11 +174,9 @@
       </div>
       <div>
         <div  class="font_14 pd_t15">
-<<<<<<< HEAD
-            <textarea style="width:100%"class="textarea_01" [(ngModel)="vusmsg"]></textarea>
-=======
+ 
             <textarea style="width:98%"class="textarea_01" [(ngModel)]="vusmsg"></textarea>
->>>>>>> 34ef5abaf5ae2a16bdb50abe3b4a761dbde1363c
+ 
           </div>
       </div>
 
@@ -234,7 +232,20 @@
         </form>
         </div>    
       </div>
+<!-- ------------------------------------- -->
+<div class="sub_title">*Methods</div>
+
+<div class="pd_r20">
+    <textarea class="textarea_01">Total genomic DNA was extracted from the each sample. Template and automated libraries were prepared on the Ion Chef System(Thermo Fisher Scientific) and subsequently sequenced on the Ion S5 system (Thermo Fisher Scientific) with the Ion 530 Chip kit. Alignment of sequences to the reference human genome (GRCh37/hg19) and base calling were performed using the Torrent Suite software version 5.8.0 (Thermo Fisher Scientific). The Torrent Variant Caller v5.8.0.19 (Thermo Fisher Scientific) was used for calling variants from mapped reads and the called variants were annotated by the Ion Reporter software v5.6. </textarea>
+</div>
+
+<div class="sub_title">Genernal limitations of the technique</div>
+ 
+<div class="pd_r20">
+    <textarea class="textarea_01">The analysis was optimised to identify base pair substitutions with a high sensitivity. The sensitivity for small insertions and deletions was lower. Deep-intronic mutations, mutations in the promoter region, repeats, large exonic deletions and duplications, and other structural variants were not detected by this test. Evaluation of germline mutation can be performed using buccal swab speciman.</textarea>
+</div>  
   <!--  -------------------------------   -->
+  <div class="sub_title">Target genes</div>
   <table cellpadding="0" cellspacing="0" class="table_result02">
        <colgroup>
           <col style="width:10%;"/>
