--- a/src/app/forms/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
+++ b/src/app/forms/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
@@ -118,12 +118,10 @@
                                              <td class="table_result_line">TP53</td>
                                              <td>p.Thr125Arg</td>
                                              <td class="textarea01">
-                                                 <textarea style="width:96%" class="textarea_01">TP53 유전자의 돌연변이는 ALL (16%), AML (12%), CLL (7%), MDS (6%), t-MN (37%) 등에서 관찰됩니다. 항암치료에 대한 순응도가 낮으며 예후가 좋지 않은 것으로 알려져 있습니다.  complex karyotype, monosomal karyotype와 유의하게 연관되어 발생되며, missense mutation이 가장 빈번하며, frameshift, nonsense mutation 순입니다. Li–Fraumeni syndrome 환자에서도 germline 변이가 관찰 될 수 있으므로, 가족력 확인 및 buccal swab 검체로 germline 변이 여부 확인 검사가 필요합니다. </textarea>
+                                                 <textarea style="width:96%" class="textarea_01"></textarea>
                                              </td>
                                              <td class="textarea01">
-                                                 <textarea style="width:96%" class="textarea_01">
-                                                  TP53 유전자의 돌연변이는 ALL (16%), AML (12%), CLL (7%), MDS (6%), t-MN (37%) 등에서 관찰됩니다. 항암치료에 대한 순응도가 낮으며 예후가 좋지 않은 것으로 알려져 있습니다.  complex karyotype, monosomal karyotype와 유의하게 연관되어 발생되며, missense mutation이 가장 빈번하며, frameshift, nonsense mutation 순입니다. Li–Fraumeni syndrome 환자에서도 germline 변이가 관찰 될 수 있으므로, 가족력 확인 및 buccal swab 검체로 germline 변이 여부 확인 검사가 필요합니다.
-                                                 </textarea>
+                                                 <textarea style="width:96%" class="textarea_01"></textarea>
                                              </td>
                                          </tr>
                                      </div>
