--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -335,9 +335,10 @@
                 <option value="benign">Benign</option>
               </select>                    
             </td>
-           <td  class="txt_c" (click)="save(i)" *ngIf="checkType(i)"  class="save_mute">
-               저장
-               <!-- <button class="btn-s blue">저장</button> -->
+           <!-- <td  class="txt_c" (click)="save(i)" *ngIf="checkType(i)"  class="save_mute">
+               저장 -->
+               <td>
+               <button class="btn-s blue">저장</button>
                <!-- 작업후 td class="save_mute" 삭제해주세요 -->
             </td>
             </tr>                               
