서비스 이력/통계, 함수관리 , 사용자 관리 타이틀 수정

--- a/src/app/byengri/byengri/manage-statistics/manage-statistics.component.html
+++ b/src/app/byengri/byengri/manage-statistics/manage-statistics.component.html
@@ -2,7 +2,7 @@
     <div id="content">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
             <tr>
-                <td  class="mail_title">Statistics Management</td>
+                <td  class="mail_title">서비스 이력/통계</td>
                 <td class="main_btn"> </td>
             </tr>
         </table>
