--- a/src/app/home/components/manage-functions/manage-functions.component.html
+++ b/src/app/home/components/manage-functions/manage-functions.component.html
@@ -2,7 +2,7 @@
     <div id="content">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
             <tr>
-                <td  class="mail_title">Function Management</td>
+                <td  class="mail_title">함수 관리</td>
             </tr>
         </table>
         
