--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -1,8 +1,8 @@
 <div id="result">
  <div class="background">
     <div id="container">
-        <div id="content">
-            <div class="box pd_20">
+        <div id="content" style="padding: 0 !important;">
+            <div class="box pd_20" style="padding: 20px !important;">
                 <div class="sub_title_01">Patient: {{patientInfo.name}}, {{patientInfo.patientID}} ({{patientInfo.gender}}/{{patientInfo.age}})</div>
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
