--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -338,7 +338,7 @@
            <!-- <td  class="txt_c" (click)="save(i)" *ngIf="checkType(i)"  class="save_mute">
                저장 -->
                <td>
-               <button class="btn-s blue">저장</button>
+               <button class="btn-s blue"  (click)="save(i)" *ngIf="checkType(i)" >저장</button>
                <!-- 작업후 td class="save_mute" 삭제해주세요 -->
             </td>
             </tr>                               
