--- a/src/app/forms/preview/preview.component.scss
+++ b/src/app/forms/preview/preview.component.scss
@@ -34,3 +34,10 @@ th {
   padding: 0px;
   overflow: scroll;
 }
+
+.preview {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
