--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -5,7 +5,7 @@
             <div class="box pd_20" style="padding: 20px !important;">
                 <div  class="preview">
                     <div class="sub_title_01">Patient: {{patientInfo.name}}, {{patientInfo.patientID}} ({{patientInfo.gender}}/{{patientInfo.age}})</div>
-                    <div><button  (click)="closeModal()">닫기</button></div>
+                    <div><button class="btn-close" (click)="closeModal()">닫기</button></div>
                 </div>
                 
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
