--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -176,7 +176,8 @@
             <!-- <td class="txt_c" (click)="save(i)" *ngIf="checkType(i)"  class="save_mute">
                 저장 -->
             <td> 
-               <button class="btn-s blue"  (click)="save(i)" *ngIf="checkType(i)">저장</button>
+               <button class="btn-s blue"  (click)="save(i)" 
+               *ngIf="checkType(i)">저장</button>
                <!-- 작업후 td class="save_mute" 삭제해주세요 -->
             </td>   
  
