--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,8 +27,8 @@
                     <a routerLink="/diag/benignComponent"><span class="nav-text"></span></a>
                      
                      <ul class="sub-menu"> 
-                      <li><span (click)="link('benign')">Benigne</span></li>
-                      <li><span (click)="link('artifacts')">Artifacrts</span></li>
+                      <li><span (click)="link('benign')">Benign</span></li>
+                      <li><span (click)="link('artifacts')">Artifacts</span></li>
                       <li><span (click)="link('mutation')">Mutation</span></li>
                       <li><span (click)="link('comments')">Comments</span></li>
                       <li><span (click)="link('genemgn')">유전자관리</span></li>
