--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         </div>
       <div class="fr fb pd_r30 pd_t40">
           <span class="txt_01">가톨릭대학교 서울성모병원</span>
-           <span style="color:#a0a0a0;">/ </span>
+           <span style="color:#a0a0a0;"></span>
             
           <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span> 
           <a href="#"><img src="../images/btn_pw.png" alt="비밀번호변경" class="pd_l06"/> 
