--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         </div>
       <div class="fr fb pd_r30 pd_t40">
           <span class="txt_01">가톨릭대학교 서울성모병원</span>
-           <span style="color:#a0a0a0;"></span>
+           <span style="color:#a0a0a0;">/ </span>
             
           <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span> 
           <a href="#"><img src="../images/btn_pw.png" alt="비밀번호변경" class="pd_l06"/> 
@@ -30,7 +30,7 @@
                       <li><span (click)="link('benign')">Benign</span></li>
                       <li><span (click)="link('artifacts')">Artifacts</span></li>
                       <li><span (click)="link('mutation')">Mutation</span></li>
-                      <li><span (click)="link('comments')">Comment</span></li>
+                      <li><span (click)="link('comments')">Comments</span></li>
                       <li><span (click)="link('genemgn')">유전자관리</span></li>
                     </ul>
                      
@@ -40,14 +40,14 @@
                     <a routerLink="/diag/managestatistics">
                     <span class="nav-text"></span></a>
                   </td>
-  <!-- --
+  <!-- -->
           
                   <td class="menu05">
                     <a routerLink="/diag/managefunctions">
                     <span class="nav-text"></span></a>
                   </td>                  
 
-                !-- -->
+                <!-- -->
                   <td class="menu06">
                     <a routerLink="/diag/manageusers">
                     <span class="nav-text"></span></a>
