--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,13 @@
 img:hover {
   cursor: pointer;
 }
+
+img.btn-logout {
+  width: 70px;
+  margin-bottom: 4px;
+}
+
+.txt_01.title {
+  display: inline-block;
+  margin-right: 15px;
+}
