--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,15 +6,14 @@
           <!-- </a> -->
         </div>
       <div class="fr fb pd_r30 pd_t40">
-          <span class="txt_01">가톨릭대학교 서울성모병원</span>
-           <span style="color:#a0a0a0;">/ </span>
+          <span class="txt_01 title">가톨릭대학교 서울성모병원</span>
             
           <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span> 
           <a href="#"><img src="../images/btn_pw.png" alt="비밀번호변경" class="pd_l06"/> 
           </a> -->
            <!-- <a href="#"><img [src]="'assets/images/btn_logout.png'" alt="로그아웃" /> -->
           <!-- </a></div> -->
-          <img [src]="'assets/images/btn_logout.png'" (click)="logout()" alt="로그아웃" />
+          <img [src]="'assets/images/btn_logout.png'" (click)="logout()" alt="로그아웃" class="btn-logout" />
       </div>
       <div id="menu">
           <table border="0" cellspacing="0" cellpadding="0">
