--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -236,7 +236,8 @@
 <form [formGroup]="tablerowForm"> 
      
     <table class="table_list header-fix"  style="text-align: center;">
-        <colgroup>           
+        <colgroup>  
+            <col style="width:20px"/>         
             <col style="width:80px"/>
             <col style="width:40px"/>  <!--     -->
             <col style="width:80px"/>  <!-- IGV -->
@@ -257,6 +258,7 @@
             </colgroup>
       <thead>
           <tr>
+              <th></th>
               <th>
                 <button class="btn btn_01 btn-s" (click)="addRow()">추가</button>
               </th> 
@@ -278,10 +280,15 @@
               <th>Action</th>                        
           </tr>
       </thead>
-      <tbody>
+      <tbody  cdkDropList (cdkDropListDropped)="droped($event)">
          
         <ng-container formArrayName="tableRows" *ngFor="let group of getFormControls.controls; let i=index">
-          <tr  [formGroupName]="i">
+          <tr  [formGroupName]="i" cdkDrag>
+            <td>
+                <button type="button" class="drag-handle"   cdkDragHandle>   
+                    <img [src]="'assets/baseline_unfold_more_black_18dp.png'">
+                </button>
+            </td> 
             <td class="trash"  (click)="deleteRow(i)">
                 <img [src]="'assets/images/cancel.png'">
             </td> 
