--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -99,6 +99,7 @@
             </colgroup>
       <thead>
           <tr>
+              <th></th>
               <th>
                 <button class="btn btn_01 btn-s" (click)="addRow()">추가</button>
               </th> 
@@ -120,10 +121,16 @@
               <th>Action</th>                        
           </tr>
       </thead>
-      <tbody>
+      <tbody  cdkDropList (cdkDropListDropped)="droped($event)">
          
         <ng-container formArrayName="tableRows" *ngFor="let group of getFormControls.controls; let i=index">
-          <tr  [formGroupName]="i">
+          <tr  [formGroupName]="i"  cdkDrag>
+
+            <td>
+                <button type="button" class="drag-handle"   cdkDragHandle>
+                  <img [src]="'assets/baseline_unfold_more_black_18dp.png'">
+                </button>
+            </td>            
             <td class="trash"  (click)="deleteRow(i)">
                  <img [src]="'assets/images/cancel.png'">
             </td> 
