--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -1,6 +1,6 @@
 <div id="result">
   <div id="container" style="position: relative;">
-      <h2 style="margin-top: 5px;">MDS/MPN NGS</h2>   
+      <h2 style="margin-top: 5px;">Lymphoma NGS</h2>   
       <button type="button" class="preview__button" (click)="previewToggle()">미리보기</button>  
       <div id="content">
           <div class="box pd_20">
