--- a/src/app/forms/commons/filtered/filtered.component.scss
+++ b/src/app/forms/commons/filtered/filtered.component.scss
@@ -1,6 +1,7 @@
 td {
   padding-top: 0 !important;
   padding-bottom: 0 !important;
+  text-align: center !important;
 }
 
 .preview__button {
@@ -72,11 +73,18 @@ img:hover {
 }
 
 .excel {
-  color: black;
-  font-size: 1rem;
-  font-weight: 500;
-  border: none;
+  color: red;
   background-color: #f0e5e5;
+  border: 1px solid #e0cccc;
+  position: absolute;
+  top: 5px;
+  right: 160px;
+  border-radius: 3px;
+  z-index: 3;
+  -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
   cursor: pointer;
-  padding: 2px 20px;
+  box-sizing: border-box;
+  padding: 5px 30px;
 }
