--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -78,7 +78,8 @@
 <form [formGroup]="tablerowForm"> 
      
     <table class="table_list header-fix"  style="text-align: center;">
-        <colgroup>           
+        <colgroup>    
+            <col style="width:50px"/>       
             <col style="width:80px"/>
             <col style="width:40px"/>  <!--     -->
             <col style="width:80px"/>  <!-- IGV -->
