--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -37,7 +37,7 @@
                 <thead>
                     <tr>
                         <th class="table_result_line">Diagnosis</th>                
-                        <th>Genetic test</th>
+                        <th>Generic test</th>
                         <th>Chromosomal analysis</th>
                     </tr>
                 </thead>
@@ -71,8 +71,8 @@
                   </colgroup>
                   <tbody>
                       <tr> 
-                          <td>TARGET DISEASE:MDS/MPN</td>
-                          <td> METHOD:*Massively parallel sequencing</td>
+                          <td>TARGET DISEASE: MDS/MPN</td>
+                          <td> METHOD: *Massively parallel sequencing</td>
                       </tr>
                       <tr>
                           <td> SPECIMEN: Genomic DNA isolated from {{specimenMsg}}</td>
