--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -37,7 +37,7 @@
                 <thead>
                     <tr>
                         <th class="table_result_line">Diagnosis</th>                
-                        <th>Generic test</th>
+                        <th>Genetic test</th>
                         <th>Chromosomal analysis</th>
                     </tr>
                 </thead>
