--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -36,7 +36,7 @@
 
                             <th *ngIf="type === 'AML'">FLT3-ITD</th>
                             <th *ngIf="type === 'ALL'">IKZF1 deletion</th>
-                            <th *ngIf="type === 'MDS'">Generic test</th>
+                            <th *ngIf="type === 'MDS'">Genetic test</th>
                             <th *ngIf="type === 'LYN'">Bone marrow aspiralion analysis</th>
                             <th>Chromosomal analysis</th>
                         </tr>
