--- a/src/app/byengri/main/main.component.html
+++ b/src/app/byengri/main/main.component.html
@@ -27,7 +27,7 @@
              >조회</button>
         </div>
         <div class="box">
-            <div class="box_100 ">
+            <div class="box_100 "  appScrollMonitor  #pbox100>
             <table border="0" cellpadding="0" cellspacing="0" class="table_list  fixed_header table_resul_x">
                 <colgroup>
                     <col width="40px">
