--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -1146,7 +1146,7 @@
         <hr class="mg_t30 mg_b20" />
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tr>
-            <td class="txt_l font_16 fb">Date of report : {{today()}} </td>
+            <td class="txt_l font_16 fb">Date of report : {{reportday}} </td>
              <!-- 기사  -->
              <!-- 
             <td class="txt_c font_16 fb">Examined by :
