inhpouse design update

--- a/src/app/inhouse/comments/comments.component.html
+++ b/src/app/inhouse/comments/comments.component.html
@@ -62,8 +62,8 @@
                         <th class="txt_c">Type</th>
                         <th class="txt_c">Gene</th>
                         <th class="txt_c">Variant Id</th>
-                        <th class="txt_c">Comment</th> 
-                        <th class="txt_c">Reference</th>
+                        <th class="txt_c">Comments</th> 
+                        <th class="txt_c">Reference(s)</th>
                         <th class="txt_c">수정/삭제</th> 
                     </tr>
                 </thead>
