--- a/src/app/inhouse/mutation/mutation.component.html
+++ b/src/app/inhouse/mutation/mutation.component.html
@@ -80,17 +80,17 @@
                         <th >Register No.</th>
                         <th >Fusion</th>
                         <th >Gene</th>
-                        <th >Funcational Impact</th>
+                        <th >Functional Impact</th>
                         <th >Transcript</th>
-                        <th >Exion Intro</th>
+                        <th >Exion/Intron #</th>
                         <th >Necleotide Change</th>   
                         <th >Amino Acid Change</th> 
                         <th >Zygosity</th>
-                        <th >Vaf</th>
-                        <th >Referance</th>
-                        <th >Cosmic Id</th>
-                        <th >Sift Polyphen Mutation Taster</th>
-                        <th >buccal2</th>
+                        <th >VAF%</th>
+                        <th >Reference</th>
+                        <th >COSMIC ID</th>
+                        <th >SIFT/Polyphen/Mutation Taster</th>
+                        <th >Buccal2</th>
                         <th >Ivg</th>
                         <th >Sanger</th>
                         <th >수정/삭제</th>  
