--- a/src/app/home/components/mainscreen/mainscreen.component.html
+++ b/src/app/home/components/mainscreen/mainscreen.component.html
@@ -40,7 +40,7 @@
           (click)="search(start.value, end.value, testedID.value, patient.value, status.value, sheet.value)">조 회</button>
       </div>
       <div class="box">
-        <div class="box_100">
+        <div class="box_100" appDiagScrollMonitor #dbox100>
         <table border="0" cellpadding="0" cellspacing="0" class="table_list  fixed_header table_resul_x">
           <colgroup>
             <col width="40px">
