--- a/src/app/byengri/byengri/byengri.component.html
+++ b/src/app/byengri/byengri/byengri.component.html
@@ -4,7 +4,7 @@
           <img [src]=" 'assets/images/logo.png'" (click)="goHome()" />
       </div>
       <div class="fr fb pd_r30 pd_t40">
-           <span class="txt_01">가톨릭대학교 서울성모병원</span>
+           <span class="txt_01 title">가톨릭대학교 서울성모병원</span>
            <span style="color:#a0a0a0;"> </span>
            <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span>
            <img [src]="'assets/images/btn_pw.png'" alt="비밀번호변경" class="pd_l06"/> -->
