--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -6,7 +6,7 @@
       <button type="button" class="excel" (click)="excelDownload()">Excel</button>
       <div id="content">
           <div class="box pd_20">
-              <div class="box_100 main-table" >
+              <div class="box_100 main-table" style="height: auto;max-height: 500px;">
                   <table cellpadding="0" cellspacing="0" class="table_list header-fix" style="text-align: center;">
                       <thead>
                           <tr>
@@ -266,12 +266,12 @@
             <col style="width:100px"/>  <!-- Functional Impact    -->
             <col style="width:160px"/>  <!-- Transcript    --> 
             <col style="width:90px"/>  <!-- Exon/Intron    -->
-            <col style="width:300px"/>  <!--  Nuceleotide change   -->
+            <col style="width:240px"/>  <!--  Nuceleotide change   -->
             <col style="width:200px"/>  <!-- Amino acid change    -->
             <col style="width:120px"/>  <!-- Zygosity    -->
-            <col style="width:250px"/>  <!--  VAF %   -->  
-            <col style="width:100px"/>  <!--   References  -->
-            <col style="width:80px"/>   <!--  COSMIC ID   -->
+            <col style="width:200px"/>  <!--  VAF %   -->  
+            <col style="width:150px"/>  <!--   References  -->
+            <col style="width:100px"/>   <!--  COSMIC ID   -->
             <col style="width:120px"/>  <!--   Site  -->
             <col style="width:80px"/>   <!--  Action -->           
             </colgroup>
