--- a/src/app/byengri/byengri/byengri.component.scss
+++ b/src/app/byengri/byengri/byengri.component.scss
@@ -5,3 +5,13 @@
 img:hover {
   cursor: pointer;
 }
+
+img.btn-logout {
+  width: 70px;
+  margin-bottom: 4px;
+}
+
+.txt_01.title {
+  display: inline-block;
+  margin-right: 15px;
+}
