--- a/src/app/forms/commons/filtered/filtered.component.html
+++ b/src/app/forms/commons/filtered/filtered.component.html
@@ -1,5 +1,5 @@
 <div class="box_100" >
-  <table width="200%" cellpadding="0" cellspacing="0" class="table_list table_height" >
+  <table width="200%" cellpadding="0" cellspacing="0" class="table_list table_height"  style="height: auto;max-height: 500px;">
       <thead>
           <tr>
               <th width="10px" class="table_result_line"></th>
