--- a/src/app/forms/form3/form3.component.html
+++ b/src/app/forms/form3/form3.component.html
@@ -66,7 +66,7 @@
                           <td> METHOD: *Massively parallel sequencing</td>
                       </tr>
                       <tr>
-                          <td> SPECIMEN: Genomic DNA isolated from {{specimenMsg}}</td>
+                          <td> SPECIMEN: Genomic DNA isolated from peripheral blood</td>
                           <td> REQUEST: {{patientInfo.request}}</td>
                       </tr>
                   </tbody>
@@ -112,7 +112,7 @@
               <th>Functional Impact</th>
               <th>Transcript</th>
               <th>Exon/Intron</th>  
-              <th>Nuceleotide change</th>    
+              <th>Nucleotide change</th>     
               <th>Amino acid change</th> 
               <th>Zygosity</th>
               <th>VAF %</th> 
