--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -118,10 +118,10 @@
               <th>Sanger</th>
               <th>Type</th>                  
               <th>Gene</th>
-              <th>Functional Impact</th>
+              <th>Functional Impact</th>  
               <th>Transcript</th>
               <th>Exon/Intron</th>  
-              <th>Nuceleotide change</th>    
+              <th>Nucleotide change</th>    
               <th>Amino acid change</th> 
               <th>Zygosity</th>
               <th>VAF %</th> 
