--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -86,7 +86,7 @@
                                   <th>Functional Impact</th>
                                   <th>Transcript</th>
                                   <th>Exon/Intron</th>
-                                  <th>Nuceleotide change</th>
+                                  <th>Nucleotide change</th>
                                   <th>Amino acid change</th>
                                   <th>Zygosity</th>
                                   <th>VAF %</th>
