--- a/src/app/byengri/byengri/manage-users/manage-users.component.html
+++ b/src/app/byengri/byengri/manage-users/manage-users.component.html
@@ -7,7 +7,7 @@
             </tr>
         </table>
         <div class="box mg_b20 pd_20">
-            <input type="date" [value]="startToday()" class="input_01" #start  style="width:180px;"/> ~ 
+            <input type="date" [value]="startToday2()" class="input_01" #start  style="width:180px;"/> ~ 
             <input type="date" [value]="endToday()" class="input_01"   #end   style="width:180px;"/> &nbsp;&nbsp;&nbsp;  
             <input type="text" placeholder="사용자ID" class="input_01" #userId />&nbsp;&nbsp;
             <input type="text" placeholder="사용자명" class="input_01" #userNm />&nbsp;&nbsp;
